--- a/config/undergroundbiomes.cfg
+++ b/config/undergroundbiomes.cfg
@@ -15,7 +15,7 @@ content {
     D:ResistanceModifier=1.0
 
     # Convert ores to have Underground Biomes stone background textures
-    B:UBifyOres=true
+    B:UBifyOres=false
 
     # Modify all recipes to include Underground Biomes stones
     B:UBifyRecipes=true
